package main.models;

public class Result {
    private int[] elections;
    private float score;

    private float checkAnswers(Elections, correctOptions){}
    
}
