package main.views.pages;

public class ExamEndedView {
    private void showScore(Result){}
    
}
